--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
+:root {
+  --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+/* * {
+  box-sizing: border-box;
+} */
+
+body {
+  background-color: #f7f7f7;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-around;
+  margin: 10px;
+  font-family: 'Lato', sans-serif;
+
+}
+
+.container {
+  margin: 3px;
+  width: 100%;
+
+}
+
+h1 {
+  letter-spacing: 1px;
+  margin: 0;
+}
+
+h3 {
+ font-size: 20px;
+ background-color: rgb(2, 158, 62);
+ color:rgb(247, 247, 247);
+ 
+
+}
+
+h4 {
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.inc-exp-container {
+  background-color: #fff;
+  box-shadow: var(--box-shadow);
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.inc-exp-container > div {
+  flex: 1;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.inc-exp-container > div:first-of-type {
+  border-right: 1px solid #dedede;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.list {
+  list-style-type: none;
+  padding: 10px;
+  margin-bottom: 4px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list li {
+  background-color: #fff;
+  box-shadow: var(--box-shadow);
+  color: #333;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  padding: 10px 30px;
+  margin: 3px 0;
+}
+.bills {
+  background-color: rgba(235, 236, 235, 0.274);
+  box-shadow: var(--box-shadow);
+  padding: 2px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  justify-content: space-between;
+  margin: 20px 0;
 }
