--- a/src/App.css
+++ b/src/App.css
@@ -10,20 +10,16 @@
 
 body {
   background-color: #f7f7f7;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-around;
-  margin: 10px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly; */
+  margin: 3%;
   font-family: 'Lato', sans-serif;
 
 }
 
-.container {
-  margin: 3px;
-  width: 100%;
 
-}
 
 h1 {
   letter-spacing: 1px;
@@ -33,9 +29,8 @@ h1 {
 h3 {
  font-size: 20px;
  background-color: rgb(2, 158, 62);
- color:rgb(247, 247, 247);
- 
-
+ color:rgb(29, 15, 15);
+ padding-left:10px;
 }
 
 h4 {
@@ -61,28 +56,49 @@ h4 {
   border-right: 1px solid #dedede;
 }
 
-.list {
-  list-style-type: none;
-  padding: 10px;
-  margin-bottom: 4px;
+
+ .head {
+  font-size: 19px;
+  padding: 0px 18px 5px 10px;
+  border-bottom:rgb(153, 150, 150) 1px solid;
+}
+td {
+  padding: 0px 85px 0px 20px;
+  border-bottom:rgb(197, 194, 194) 1px solid;
+  background-color: #fff;
+  color: #333;
+  text-align: left;
+  font-size: 17px;
+}
+td p {
+  padding: 0px 3px 0px 3px;
+  margin: 2px 2px;
 }
 
-.list li {
-  background-color: #fff;
-  box-shadow: var(--box-shadow);
-  color: #333;
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  padding: 10px 30px;
-  margin: 3px 0;
+td:hover {
+  background-color: rgb(202, 204, 203);
+}
+.hidden {
+  display:none;
+}
+ .expand {
+padding: 0px 3px 0px 3px;
+}
+.expand input {
+  width: 50px;
+  font-size: 16px;
+  font-weight: 500;
 }
 .bills {
   background-color: rgba(235, 236, 235, 0.274);
   box-shadow: var(--box-shadow);
-  padding: 2px;
+  padding: 3px 25px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 20px 0;
+  margin: 15px;
+}
+.dashboard {
+  display: flex;
+  flex-direction:row;
 }
