--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,15 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly; */
-  margin: 3%;
+  margin: 2% 15%;
   font-family: 'Lato', sans-serif;
 
 }
 
+img {
+  width: 600px;
 
+}
 
 h1 {
   letter-spacing: 1px;
@@ -37,26 +40,6 @@ h4 {
   margin: 0;
   text-transform: uppercase;
 }
-
-.inc-exp-container {
-  background-color: #fff;
-  box-shadow: var(--box-shadow);
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  margin: 20px 0;
-}
-
-.inc-exp-container > div {
-  flex: 1;
-  text-align: center;
-}
-
-.inc-exp-container > div:first-of-type {
-  border-right: 1px solid #dedede;
-}
-
-
  .head {
   font-size: 19px;
   padding: 0px 18px 5px 10px;
@@ -95,8 +78,8 @@ padding: 0px 3px 0px 3px;
   padding: 3px 25px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  margin: 15px;
+  justify-content: space-around;
+  margin: 25px;
 }
 .dashboard {
   display: flex;
