--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins&effect=3d-float');
 
 :root {
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -14,25 +15,33 @@ body {
   font-family: 'Lato', sans-serif;
 }
 .App {
- 
+  font-family: 'Poppins';
 }
 
+.home{
+  margin: 2% 52% 1% 2%;
+  padding: 3%;
+  border:#96bddc 2px solid;
+}
 .header{
+  display: flex;
+  flex-direction: row;
   background-color: #d4ebfd;
   margin: 1px 25px;
+  padding: 3%;
 }
 img {
-  width: 600px;
-  
-
+  width: 50%;
 }
 
 h1 {
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   margin: 10px;
-  font-size: 32px;
+  font-size: 34px;
 }
-
+h2{
+  font-size: 29px;
+}
 h3 {
  font-size: 25px;
  font-weight: 500;
@@ -43,22 +52,34 @@ h3 {
  box-shadow: var(--box-shadow);
 }
 
+button {
+  font-size: 14px;
+  background-color: #f8f8fa;
+  padding: 2px 6px;
+  border-radius: 5px;
+}
+
 h4 {
   margin: 0;
   text-transform: uppercase;
+  font-size: 21px;
+  color:#212B40;
+  font-weight: 700;
 }
  .head {
   font-size: 19px;
-  padding: 0px 18px 5px 10px;
+  padding: 0px 20px 2px 20px;
   border-bottom:rgb(153, 150, 150) 1px solid;
+  margin-top: 0;
 }
 td {
-  padding: 0px 35px 0px 10px;
+  padding: 3px 45px 3px 15px;
   border-bottom:rgb(197, 194, 194) 1px solid;
   background-color: #fff;
-  color: #333;
   text-align: left;
   font-size: 17px;
+  font-weight: 500;
+  color: #121214 ;
 }
 td p {
   padding: 0px 3px 0px 3px;
@@ -66,8 +87,8 @@ td p {
 }
 
 .edit {
-  border:rgb(153, 150, 150) 1px solid;
-  background-color: rgb(255, 255, 255);
+  border:rgb(221, 217, 217) 1px solid;
+  background-color: rgba(223, 223, 223, 0.336);
 }
 .edit:hover {
   background-color: rgb(202, 204, 203);
@@ -84,13 +105,21 @@ padding: 0px 3px 0px 3px;
   font-weight: 500;
 }
 .bills {
-  background-color: #96bddc;
+  background-color: #84a2bb;
   box-shadow: var(--box-shadow);
-  /* padding: 3px 25px; */
+  padding: 4px 25px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   margin: 25px;
+}
+
+.login {
+  background-color: #84a2bb;
+  box-shadow: var(--box-shadow);
+  margin: 2% 40% 2% 3%;
+  min-width: 200px;
+  padding: 0px 13px 13px;
 }
 .dashboard {
   margin-top:25px;
@@ -102,10 +131,11 @@ padding: 0px 3px 0px 3px;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   background-color: #212b40;
-  margin: 5px 0px;
+  margin: 2px 0px;
   color: #96bddc;
+  
 }
  .grid {
     display: flex;
@@ -114,4 +144,8 @@ padding: 0px 3px 0px 3px;
   align-items: flex-start;
   justify-content: space-between;
   margin: 1% 10%;
+  padding: 15px;
+  background-color: #b2cfe254;
 }
+
+@media ()
