--- a/src/App.css
+++ b/src/App.css
@@ -12,15 +12,15 @@
 body {
   background-color: #212B40;
   margin: 2% 15%;
-  font-family: 'Lato', sans-serif;
 }
 .App {
   font-family: 'Poppins';
 }
 
 .home{
-  margin: 2% 52% 1% 2%;
-  padding: 3%;
+  margin: 5% 3%;
+  max-width: 700px;
+  padding: 4%;
   border:#96bddc 2px solid;
 }
 .header{
@@ -54,9 +54,35 @@ h3 {
 
 button {
   font-size: 14px;
+  color:#254581;
+  letter-spacing: 1px;
+  font-weight: 600;
   background-color: #f8f8fa;
-  padding: 2px 6px;
+  padding: 6px 16px;
+  margin: 5px 3px;
   border-radius: 5px;
+  text-transform: uppercase;
+}
+
+button:hover {
+  background-color: #1f3564;
+  color: #96bddc
+}
+#x {
+  font-size: 14px;
+  color:#a10404;
+  letter-spacing: 1px;
+  font-weight: 600;
+  background-color: #f8f8fa;
+  padding: 3px 7px;
+  margin: 5px 2px;
+  border: 1px solid #323336;
+  border-radius: 11px;
+  text-transform: uppercase;
+}
+#x:hover {
+  color:#f5f5f5;
+  background-color: #a10404;
 }
 
 h4 {
@@ -148,4 +174,254 @@ padding: 0px 3px 0px 3px;
   background-color: #b2cfe254;
 }
 
-@media ()
+@media all and (max-width:600px ) {
+
+  body {
+    margin: 0px;
+  }
+  
+.home{
+  margin: 6% 3%;
+  padding: 16px;
+}
+.header{
+  margin: 3% 10px;
+  padding: 8px 2px;
+}
+img {
+  width: 100%;
+}
+h1 {
+  letter-spacing: 1px;
+  margin: 5px 1px;
+  font-size: 30px;
+}
+h2{
+  font-size: 25px;
+}
+h3 {
+ font-size: 21px;
+ padding: 4px 10px 2px 10px;
+ margin-top: 2px;
+}
+h4 {
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 17px;
+}
+button {
+  font-size: 12px;
+  color:#20428a;
+  font-weight: 600;
+  background-color: #f8f8fa;
+  padding: 3px 4px;
+  margin: 5px 1px;
+  border-radius: 4px;
+}
+#x {
+  font-size: 12px;
+  color:#a10404;
+  letter-spacing: 1px;
+  font-weight: 600;
+  background-color: #f8f8fa;
+  padding: 3px 3px;
+  margin: 5px 2px;
+  border: 1px solid #323336;
+  border-radius: 11px;
+  text-transform: uppercase;
+}
+.bills {
+  padding: 4px 1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 5px 1px;
+}
+
+.login {
+  margin: 2% 20% 2% 5%;
+  min-width: 245px;
+  padding: 0px 13px 13px;
+}
+.dashboard {
+  margin-top:25px;
+}
+.headline {
+  margin: 15px 1px 1px 1px;
+}
+ .grid {
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: stretch;
+  margin: 1% 2px;
+  padding: 2px;
+  background-color: #b2cfe254;
+}
+.head {
+  font-size: 14px;
+  padding: 1px 1px;
+  border-bottom:rgb(153, 150, 150) 1px solid;
+  margin-top: 0;
+}
+
+td {
+  padding: 0px;
+  border-bottom:rgb(197, 194, 194) 1px solid;
+  background-color: #fff;
+  text-align: left;
+  font-size: 13px;
+  font-weight: 500;
+  color: #121214 ;
+}
+td p {
+  padding: 0px;
+  margin: 0px;
+}
+
+.edit {
+  border:rgb(221, 217, 217) 1px solid;
+  background-color: rgba(223, 223, 223, 0.336);
+}
+.edit:hover {
+  background-color: rgb(202, 204, 203);
+}
+.hidden {
+  display:none;
+}
+ .expand {
+padding: 0px 3px 0px 3px;
+}
+.expand input {
+  width: 50px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+}
+
+@media all and (min-width:601px max-width:900px ) {
+
+  body {
+    margin: 0px;
+  }
+  
+.home{
+  margin: 6% 3%;
+  padding: 16px;
+}
+.header{
+  margin: 3% 10px;
+  padding: 8px 2px;
+}
+img {
+  width: 100%;
+}
+h1 {
+  letter-spacing: 1px;
+  margin: 5px 1px;
+  font-size: 30px;
+}
+h2{
+  font-size: 25px;
+}
+h3 {
+ font-size: 21px;
+ padding: 4px 10px 2px 10px;
+ margin-top: 2px;
+}
+h4 {
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 17px;
+}
+button {
+  font-size: 12px;
+  color:#20428a;
+  font-weight: 600;
+  background-color: #f8f8fa;
+  padding: 3px 4px;
+  margin: 5px 1px;
+  border-radius: 4px;
+}
+#x {
+  font-size: 12px;
+  color:#a10404;
+  letter-spacing: 1px;
+  font-weight: 600;
+  background-color: #f8f8fa;
+  padding: 3px 3px;
+  margin: 5px 2px;
+  border: 1px solid #323336;
+  border-radius: 11px;
+  text-transform: uppercase;
+}
+.bills {
+  padding: 4px 1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 5px 1px;
+}
+
+.login {
+  margin: 2% 20% 2% 5%;
+  min-width: 245px;
+  padding: 0px 13px 13px;
+}
+.dashboard {
+  margin-top:25px;
+}
+.headline {
+  margin: 15px 1px 1px 1px;
+}
+ .grid {
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: stretch;
+  margin: 1% 2px;
+  padding: 2px;
+  background-color: #b2cfe254;
+}
+.head {
+  font-size: 14px;
+  padding: 1px 1px;
+  border-bottom:rgb(153, 150, 150) 1px solid;
+  margin-top: 0;
+}
+
+td {
+  padding: 0px;
+  border-bottom:rgb(197, 194, 194) 1px solid;
+  background-color: #fff;
+  text-align: left;
+  font-size: 13px;
+  font-weight: 500;
+  color: #121214 ;
+}
+td p {
+  padding: 0px;
+  margin: 0px;
+}
+
+.edit {
+  border:rgb(221, 217, 217) 1px solid;
+  background-color: rgba(223, 223, 223, 0.336);
+}
+.edit:hover {
+  background-color: rgb(202, 204, 203);
+}
+.hidden {
+  display:none;
+}
+ .expand {
+padding: 0px 3px 0px 3px;
+}
+.expand input {
+  width: 50px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+}
