--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ h3 {
  box-shadow: var(--box-shadow);
 }
 
-button {
+/* button {
   font-size: 14px;
   color:#254581;
   letter-spacing: 1px;
@@ -62,7 +62,7 @@ button {
   margin: 5px 3px;
   border-radius: 5px;
   text-transform: uppercase;
-}
+} */
 
 button:hover {
   background-color: #1f3564;
@@ -174,10 +174,10 @@ padding: 0px 3px 0px 3px;
   background-color: #b2cfe254;
 }
 
-@media all and (max-width:600px ) {
+@media all and (max-width:1200px ) {
 
   body {
-    margin: 0px;
+    margin: 10px;
   }
   
 .home{
@@ -189,53 +189,53 @@ padding: 0px 3px 0px 3px;
   padding: 8px 2px;
 }
 img {
-  width: 100%;
+  width: 90%;
 }
 h1 {
   letter-spacing: 1px;
-  margin: 5px 1px;
-  font-size: 30px;
+  margin: 5px 5px;
+  font-size: 32px;
 }
 h2{
-  font-size: 25px;
+  font-size: 28px;
 }
 h3 {
- font-size: 21px;
+ font-size: 23px;
  padding: 4px 10px 2px 10px;
  margin-top: 2px;
 }
 h4 {
   margin: 0;
   text-transform: uppercase;
-  font-size: 17px;
+  font-size: 19px;
 }
-button {
-  font-size: 12px;
+/* button {
+  font-size: 14px;
   color:#20428a;
   font-weight: 600;
   background-color: #f8f8fa;
-  padding: 3px 4px;
+  padding: 4px 4px;
   margin: 5px 1px;
   border-radius: 4px;
-}
+} */
 #x {
   font-size: 12px;
   color:#a10404;
   letter-spacing: 1px;
   font-weight: 600;
   background-color: #f8f8fa;
-  padding: 3px 3px;
+  padding: 4px 5px;
   margin: 5px 2px;
   border: 1px solid #323336;
-  border-radius: 11px;
+  border-radius: 1px;
   text-transform: uppercase;
 }
 .bills {
-  padding: 4px 1px;
+  padding: 8px 8px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 5px 1px;
+  margin: 8px;
 }
 
 .login {
@@ -251,31 +251,31 @@ button {
 }
  .grid {
    display: flex;
-   flex-direction: column;
-   justify-content: flex-start;
-   align-items: stretch;
-  margin: 1% 2px;
-  padding: 2px;
+   flex-direction: row;
+   justify-content: space-between;
+   align-items: flex-start;
+  margin: 1% 5px;
+  padding: 5px;
   background-color: #b2cfe254;
 }
 .head {
-  font-size: 14px;
-  padding: 1px 1px;
+  font-size: 17px;
+  padding: 1px 3px;
   border-bottom:rgb(153, 150, 150) 1px solid;
   margin-top: 0;
 }
 
 td {
-  padding: 0px;
+  padding: 2px 10px;
   border-bottom:rgb(197, 194, 194) 1px solid;
   background-color: #fff;
   text-align: left;
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 500;
   color: #121214 ;
 }
 td p {
-  padding: 0px;
+  padding: 1px;
   margin: 0px;
 }
 
@@ -300,10 +300,10 @@ padding: 0px 3px 0px 3px;
 
 }
 
-@media all and (min-width:601px max-width:900px ) {
+@media all and (max-width:660px ) {
 
   body {
-    margin: 0px;
+    margin: 2px;
   }
   
 .home{
@@ -319,7 +319,7 @@ img {
 }
 h1 {
   letter-spacing: 1px;
-  margin: 5px 1px;
+  margin: 1px 1px;
   font-size: 30px;
 }
 h2{
@@ -335,7 +335,7 @@ h4 {
   text-transform: uppercase;
   font-size: 17px;
 }
-button {
+/* button {
   font-size: 12px;
   color:#20428a;
   font-weight: 600;
@@ -343,17 +343,17 @@ button {
   padding: 3px 4px;
   margin: 5px 1px;
   border-radius: 4px;
-}
+} */
 #x {
-  font-size: 12px;
+  font-size: 11px;
   color:#a10404;
   letter-spacing: 1px;
   font-weight: 600;
   background-color: #f8f8fa;
-  padding: 3px 3px;
-  margin: 5px 2px;
+  padding: 1px;
+  margin: 1px 1px;
   border: 1px solid #323336;
-  border-radius: 11px;
+  border-radius: 1px;
   text-transform: uppercase;
 }
 .bills {
@@ -373,7 +373,7 @@ button {
   margin-top:25px;
 }
 .headline {
-  margin: 15px 1px 1px 1px;
+  margin: 18px 1px 18px 1px;
 }
  .grid {
    display: flex;
@@ -382,21 +382,21 @@ button {
    align-items: stretch;
   margin: 1% 2px;
   padding: 2px;
-  background-color: #b2cfe254;
+  background-color: #b2cfe200;
 }
 .head {
-  font-size: 14px;
-  padding: 1px 1px;
+  font-size: 13px;
+  padding: 0px 1px;
   border-bottom:rgb(153, 150, 150) 1px solid;
   margin-top: 0;
 }
 
 td {
-  padding: 0px;
+  padding: 1px;
   border-bottom:rgb(197, 194, 194) 1px solid;
   background-color: #fff;
   text-align: left;
-  font-size: 13px;
+  font-size: 12px;
   font-weight: 500;
   color: #121214 ;
 }
