--- a/src/App.css
+++ b/src/App.css
@@ -174,7 +174,7 @@ padding: 0px 3px 0px 3px;
   background-color: #b2cfe254;
 }
 
-@media all and (max-width:1200px ) {
+@media all and (max-width:1500px ) {
 
   body {
     margin: 10px;
@@ -231,11 +231,11 @@ h4 {
   text-transform: uppercase;
 }
 .bills {
-  padding: 8px 8px;
+  padding: 12px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 8px;
+  margin: 8px 2px;
 }
 
 .login {
@@ -254,8 +254,9 @@ h4 {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
-  margin: 1% 5px;
-  padding: 5px;
+   flex-wrap: wrap;
+  margin: 1% 13px;
+  padding: 10px;
   background-color: #b2cfe254;
 }
 .head {
@@ -266,11 +267,11 @@ h4 {
 }
 
 td {
-  padding: 2px 10px;
+  padding: 2px 12px;
   border-bottom:rgb(197, 194, 194) 1px solid;
   background-color: #fff;
   text-align: left;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 500;
   color: #121214 ;
 }
@@ -299,8 +300,46 @@ padding: 0px 3px 0px 3px;
 }
 
 }
+@media all and (max-width:1200px ) {
+  .bills {
+    padding: 10px 15px;
+    margin: 12px 1px;
+    min-width: 350px;
+  }
+  td {
+    padding: 3px 15px;
+    text-align: left;
+    font-size: 15px;
+    font-weight: 500;
+  }
+  .expand input {
+    display: block;
+    width: 50px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
+@media all and (max-width:800px ) {
+  .bills {
+    padding: 10px 15px;
+    margin: 12px 1px;
+    min-width: 30px;
+  }
+  td {
+    padding: 3px 15px;
+    text-align: left;
+    font-size: 15px;
+    font-weight: 500;
+  }
+  .expand input {
+    display: block;
+    width: 50px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
 
-@media all and (max-width:660px ) {
+@media all and (max-width:590px ) {
 
   body {
     margin: 2px;
@@ -308,14 +347,14 @@ padding: 0px 3px 0px 3px;
   
 .home{
   margin: 6% 3%;
-  padding: 16px;
+  padding: 18px;
 }
 .header{
   margin: 3% 10px;
-  padding: 8px 2px;
+  padding: 8px 6px;
 }
 img {
-  width: 100%;
+  width: 90%;
 }
 h1 {
   letter-spacing: 1px;
@@ -323,10 +362,10 @@ h1 {
   font-size: 30px;
 }
 h2{
-  font-size: 25px;
+  font-size: 27px;
 }
 h3 {
- font-size: 21px;
+ font-size: 24px;
  padding: 4px 10px 2px 10px;
  margin-top: 2px;
 }
@@ -357,11 +396,13 @@ h4 {
   text-transform: uppercase;
 }
 .bills {
-  padding: 4px 1px;
+  padding: 8px 1px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin: 5px 1px;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 12px 1px;
+  min-width: 3px;
 }
 
 .login {
@@ -386,13 +427,13 @@ h4 {
 }
 .head {
   font-size: 13px;
-  padding: 0px 1px;
+  padding: 1px 1px;
   border-bottom:rgb(153, 150, 150) 1px solid;
   margin-top: 0;
 }
 
 td {
-  padding: 1px;
+  padding: 4px 1px;
   border-bottom:rgb(197, 194, 194) 1px solid;
   background-color: #fff;
   text-align: left;
@@ -416,12 +457,36 @@ td p {
   display:none;
 }
  .expand {
-padding: 0px 3px 0px 3px;
+padding: 0px 2px 0px 2px;
 }
 .expand input {
-  width: 50px;
+  display: block;
+  width: 60px;
   font-size: 16px;
   font-weight: 500;
 }
 
+}
+
+@media all and (max-width:375px ) {
+
+  .bills {
+    padding: 8px 1px;
+    margin: 12px 0px;
+  }
+  td {
+    padding: 4px 0px;
+    font-size: 12px;
+  }
+  .grid {
+   margin: 1% 0px;
+   padding: 1px;
+ 
+ }
+ .head {
+  font-size: 13px;
+  font-weight: 500;
+  padding: 0px;
+  margin-top: 0;
+}
 }
