--- a/src/App.css
+++ b/src/App.css
@@ -174,10 +174,10 @@ padding: 0px 3px 0px 3px;
   background-color: #b2cfe254;
 }
 
-@media all and (max-width:1500px ) {
+@media all and (max-width:2000px ) {
 
   body {
-    margin: 10px;
+    margin: 2% 15%;
   }
   
 .home{
@@ -186,10 +186,10 @@ padding: 0px 3px 0px 3px;
 }
 .header{
   margin: 3% 10px;
-  padding: 8px 2px;
+  padding: 10px 12px;
 }
 img {
-  width: 90%;
+  width: 70%;
 }
 h1 {
   letter-spacing: 1px;
@@ -234,8 +234,9 @@ h4 {
   padding: 12px 20px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 8px 2px;
+  min-width: 350px;
 }
 
 .login {
@@ -260,14 +261,14 @@ h4 {
   background-color: #b2cfe254;
 }
 .head {
-  font-size: 17px;
+  font-size: 18px;
   padding: 1px 3px;
   border-bottom:rgb(153, 150, 150) 1px solid;
   margin-top: 0;
 }
 
 td {
-  padding: 2px 12px;
+  padding: 2px 19px;
   border-bottom:rgb(197, 194, 194) 1px solid;
   background-color: #fff;
   text-align: left;
@@ -291,25 +292,37 @@ td p {
   display:none;
 }
  .expand {
-padding: 0px 3px 0px 3px;
+padding: 0px 8px 0px 8px;
 }
 .expand input {
-  width: 50px;
+  display: block;
+  width: 60px;
   font-size: 16px;
   font-weight: 500;
 }
 
 }
+
 @media all and (max-width:1200px ) {
+  body {
+    margin: 2%;
+  }
+  .header{
+    margin: 3% 10px;
+    padding: 15px;
+  }
+  img {
+    width: 65%;
+  }
   .bills {
-    padding: 10px 15px;
+    padding: 10px 18px;
     margin: 12px 1px;
-    min-width: 350px;
+    min-width: 370px;
   }
   td {
-    padding: 3px 15px;
+    padding: 3px 19px;
     text-align: left;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 500;
   }
   .expand input {
@@ -319,14 +332,25 @@ padding: 0px 3px 0px 3px;
     font-weight: 500;
   }
 }
-@media all and (max-width:800px ) {
+@media all and (max-width:900px ) {
+
+  .header{
+    margin: 3% 10px;
+    padding: 10px 8px;
+  }
+  img {
+    width: 70%;
+  }
+  .headline {
+    text-align: center;
+  }
   .bills {
     padding: 10px 15px;
     margin: 12px 1px;
     min-width: 30px;
   }
   td {
-    padding: 3px 15px;
+    padding: 3px 16px;
     text-align: left;
     font-size: 15px;
     font-weight: 500;
@@ -350,11 +374,11 @@ padding: 0px 3px 0px 3px;
   padding: 18px;
 }
 .header{
-  margin: 3% 10px;
-  padding: 8px 6px;
+  margin: 3% 5px;
+  padding: 2px 6px;
 }
 img {
-  width: 90%;
+  width: 75%;
 }
 h1 {
   letter-spacing: 1px;
@@ -374,15 +398,12 @@ h4 {
   text-transform: uppercase;
   font-size: 17px;
 }
-/* button {
+button {
   font-size: 12px;
-  color:#20428a;
-  font-weight: 600;
-  background-color: #f8f8fa;
-  padding: 3px 4px;
+  padding: 3px 5px;
   margin: 5px 1px;
-  border-radius: 4px;
-} */
+  border-radius: 0px;
+}
 #x {
   font-size: 11px;
   color:#a10404;
@@ -415,18 +436,19 @@ h4 {
 }
 .headline {
   margin: 18px 1px 18px 1px;
+  text-align: center;
 }
  .grid {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: stretch;
-  margin: 1% 2px;
+  margin: 2% 2px;
   padding: 2px;
   background-color: #b2cfe200;
 }
 .head {
-  font-size: 13px;
+  font-size: 15px;
   padding: 1px 1px;
   border-bottom:rgb(153, 150, 150) 1px solid;
   margin-top: 0;
@@ -437,7 +459,7 @@ td {
   border-bottom:rgb(197, 194, 194) 1px solid;
   background-color: #fff;
   text-align: left;
-  font-size: 12px;
+  font-size: 13px;
   font-weight: 500;
   color: #121214 ;
 }
@@ -469,10 +491,21 @@ padding: 0px 2px 0px 2px;
 }
 
 @media all and (max-width:375px ) {
-
+  .header{
+    margin: 3% 10px;
+    padding: 10px 4px;
+  }
+  img {
+    width: 80%;
+  }
+ 
+  #i {
+    margin-left: 7px;
+    padding-right: 5px;
+  }
   .bills {
     padding: 8px 1px;
-    margin: 12px 0px;
+    margin: 14px 1px;
   }
   td {
     padding: 4px 0px;
@@ -488,5 +521,17 @@ padding: 0px 2px 0px 2px;
   font-weight: 500;
   padding: 0px;
   margin-top: 0;
+}
+#x {
+  font-size: 11px;
+  color:#a10404;
+  letter-spacing: 1px;
+  font-weight: 600;
+  background-color: #f8f8fa;
+  padding: 1px;
+  margin: 1px 0px;
+  border: 1px solid #323336;
+  border-radius: 1px;
+  text-transform: uppercase;
 }
 }
