--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Poppins&effect=3d-float');
+@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins&effect=3d-float");
 
 :root {
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -10,20 +10,20 @@
 } */
 
 body {
-  background-color: #212B40;
+  background-color: #212b40;
   margin: 2% 15%;
 }
 .App {
-  font-family: 'Poppins';
+  font-family: "Poppins";
 }
 
-.home{
+.home {
   margin: 5% 3%;
   max-width: 700px;
   padding: 4%;
-  border:#96bddc 2px solid;
+  border: #96bddc 2px solid;
 }
-.header{
+.header {
   display: flex;
   flex-direction: row;
   background-color: #d4ebfd;
@@ -39,17 +39,17 @@ h1 {
   margin: 10px;
   font-size: 34px;
 }
-h2{
+h2 {
   font-size: 29px;
 }
 h3 {
- font-size: 25px;
- font-weight: 500;
- padding: 5px 35px 3px 25px;
- background-color: #88b122;
- color: white;
- margin-top: 0;
- box-shadow: var(--box-shadow);
+  font-size: 25px;
+  font-weight: 500;
+  padding: 5px 35px 3px 25px;
+  background-color: #88b122;
+  color: white;
+  margin-top: 0;
+  box-shadow: var(--box-shadow);
 }
 
 /* button {
@@ -66,11 +66,11 @@ h3 {
 
 button:hover {
   background-color: #1f3564;
-  color: #96bddc
+  color: #96bddc;
 }
 #x {
   font-size: 14px;
-  color:#a10404;
+  color: #a10404;
   letter-spacing: 1px;
   font-weight: 600;
   background-color: #f8f8fa;
@@ -81,7 +81,7 @@ button:hover {
   text-transform: uppercase;
 }
 #x:hover {
-  color:#f5f5f5;
+  color: #f5f5f5;
   background-color: #a10404;
 }
 
@@ -89,23 +89,23 @@ h4 {
   margin: 0;
   text-transform: uppercase;
   font-size: 21px;
-  color:#212B40;
+  color: #212b40;
   font-weight: 700;
 }
- .head {
+.head {
   font-size: 19px;
   padding: 0px 20px 2px 20px;
-  border-bottom:rgb(153, 150, 150) 1px solid;
+  border-bottom: rgb(153, 150, 150) 1px solid;
   margin-top: 0;
 }
 td {
   padding: 3px 45px 3px 15px;
-  border-bottom:rgb(197, 194, 194) 1px solid;
+  border-bottom: rgb(197, 194, 194) 1px solid;
   background-color: #fff;
   text-align: left;
   font-size: 17px;
   font-weight: 500;
-  color: #121214 ;
+  color: #121214;
 }
 td p {
   padding: 0px 3px 0px 3px;
@@ -113,17 +113,17 @@ td p {
 }
 
 .edit {
-  border:rgb(221, 217, 217) 1px solid;
+  border: rgb(221, 217, 217) 1px solid;
   background-color: rgba(223, 223, 223, 0.336);
 }
 .edit:hover {
   background-color: rgb(202, 204, 203);
 }
 .hidden {
-  display:none;
+  display: none;
 }
- .expand {
-padding: 0px 3px 0px 3px;
+.expand {
+  padding: 0px 3px 0px 3px;
 }
 .expand input {
   width: 50px;
@@ -148,9 +148,7 @@ padding: 0px 3px 0px 3px;
   padding: 0px 13px 13px;
 }
 .dashboard {
-  margin-top:25px;
- 
-  
+  margin-top: 25px;
 }
 .headline {
   display: flex;
@@ -161,11 +159,10 @@ padding: 0px 3px 0px 3px;
   background-color: #212b40;
   margin: 2px 0px;
   color: #96bddc;
-  
 }
- .grid {
-    display: flex;
-  flex-direction:row;
+.grid {
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
@@ -174,42 +171,41 @@ padding: 0px 3px 0px 3px;
   background-color: #b2cfe254;
 }
 
-@media all and (max-width:2000px ) {
-
+@media all and (max-width: 2000px) {
   body {
     margin: 2% 15%;
   }
-  
-.home{
-  margin: 6% 3%;
-  padding: 16px;
-}
-.header{
-  margin: 3% 10px;
-  padding: 10px 12px;
-}
-img {
-  width: 70%;
-}
-h1 {
-  letter-spacing: 1px;
-  margin: 5px 5px;
-  font-size: 32px;
-}
-h2{
-  font-size: 28px;
-}
-h3 {
- font-size: 23px;
- padding: 4px 10px 2px 10px;
- margin-top: 2px;
-}
-h4 {
-  margin: 0;
-  text-transform: uppercase;
-  font-size: 19px;
-}
-/* button {
+
+  .home {
+    margin: 6% 3%;
+    padding: 16px;
+  }
+  .header {
+    margin: 3% 10px;
+    padding: 10px 12px;
+  }
+  img {
+    width: 70%;
+  }
+  h1 {
+    letter-spacing: 1px;
+    margin: 5px 5px;
+    font-size: 32px;
+  }
+  h2 {
+    font-size: 28px;
+  }
+  h3 {
+    font-size: 23px;
+    padding: 4px 10px 2px 10px;
+    margin-top: 2px;
+  }
+  h4 {
+    margin: 0;
+    text-transform: uppercase;
+    font-size: 19px;
+  }
+  /* button {
   font-size: 14px;
   color:#20428a;
   font-weight: 600;
@@ -218,96 +214,95 @@ h4 {
   margin: 5px 1px;
   border-radius: 4px;
 } */
-#x {
-  font-size: 12px;
-  color:#a10404;
-  letter-spacing: 1px;
-  font-weight: 600;
-  background-color: #f8f8fa;
-  padding: 4px 5px;
-  margin: 5px 2px;
-  border: 1px solid #323336;
-  border-radius: 1px;
-  text-transform: uppercase;
-}
-.bills {
-  padding: 12px 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  margin: 8px 2px;
-  min-width: 350px;
+  #x {
+    font-size: 12px;
+    color: #a10404;
+    letter-spacing: 1px;
+    font-weight: 600;
+    background-color: #f8f8fa;
+    padding: 4px 5px;
+    margin: 5px 2px;
+    border: 1px solid #323336;
+    border-radius: 1px;
+    text-transform: uppercase;
+  }
+  .bills {
+    padding: 12px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 8px 2px;
+    min-width: 350px;
+  }
+
+  .login {
+    margin: 2% 20% 2% 5%;
+    min-width: 245px;
+    padding: 0px 13px 13px;
+  }
+  .dashboard {
+    margin-top: 25px;
+  }
+  .headline {
+    margin: 15px 1px 1px 1px;
+  }
+  .grid {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin: 1% 13px;
+    padding: 10px;
+    background-color: #b2cfe254;
+  }
+  .head {
+    font-size: 18px;
+    padding: 1px 3px;
+    border-bottom: rgb(153, 150, 150) 1px solid;
+    margin-top: 0;
+  }
+
+  td {
+    padding: 2px 19px;
+    border-bottom: rgb(197, 194, 194) 1px solid;
+    background-color: #fff;
+    text-align: left;
+    font-size: 16px;
+    font-weight: 500;
+    color: #121214;
+  }
+  td p {
+    padding: 1px;
+    margin: 0px;
+  }
+
+  .edit {
+    border: rgb(221, 217, 217) 1px solid;
+    background-color: rgba(223, 223, 223, 0.336);
+  }
+  .edit:hover {
+    background-color: rgb(202, 204, 203);
+  }
+  .hidden {
+    display: none;
+  }
+  .expand {
+    padding: 0px 8px 0px 8px;
+  }
+  .expand input {
+    display: block;
+    width: 60px;
+    font-size: 16px;
+    font-weight: 500;
+  }
 }
 
-.login {
-  margin: 2% 20% 2% 5%;
-  min-width: 245px;
-  padding: 0px 13px 13px;
-}
-.dashboard {
-  margin-top:25px;
-}
-.headline {
-  margin: 15px 1px 1px 1px;
-}
- .grid {
-   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-   align-items: flex-start;
-   flex-wrap: wrap;
-  margin: 1% 13px;
-  padding: 10px;
-  background-color: #b2cfe254;
-}
-.head {
-  font-size: 18px;
-  padding: 1px 3px;
-  border-bottom:rgb(153, 150, 150) 1px solid;
-  margin-top: 0;
-}
-
-td {
-  padding: 2px 19px;
-  border-bottom:rgb(197, 194, 194) 1px solid;
-  background-color: #fff;
-  text-align: left;
-  font-size: 16px;
-  font-weight: 500;
-  color: #121214 ;
-}
-td p {
-  padding: 1px;
-  margin: 0px;
-}
-
-.edit {
-  border:rgb(221, 217, 217) 1px solid;
-  background-color: rgba(223, 223, 223, 0.336);
-}
-.edit:hover {
-  background-color: rgb(202, 204, 203);
-}
-.hidden {
-  display:none;
-}
- .expand {
-padding: 0px 8px 0px 8px;
-}
-.expand input {
-  display: block;
-  width: 60px;
-  font-size: 16px;
-  font-weight: 500;
-}
-
-}
-
-@media all and (max-width:1200px ) {
+@media all and (max-width: 1200px) {
   body {
     margin: 2%;
   }
-  .header{
+  .header {
     margin: 3% 10px;
     padding: 15px;
   }
@@ -332,9 +327,8 @@ padding: 0px 8px 0px 8px;
     font-weight: 500;
   }
 }
-@media all and (max-width:900px ) {
-
-  .header{
+@media all and (max-width: 900px) {
+  .header {
     margin: 3% 10px;
     padding: 10px 8px;
   }
@@ -363,142 +357,141 @@ padding: 0px 8px 0px 8px;
   }
 }
 
-@media all and (max-width:590px ) {
-
+@media all and (max-width: 590px) {
   body {
     margin: 2px;
   }
-  
-.home{
-  margin: 6% 3%;
-  padding: 18px;
-}
-.header{
-  margin: 3% 5px;
-  padding: 2px 6px;
-}
-img {
-  width: 75%;
-}
-h1 {
-  letter-spacing: 1px;
-  margin: 1px 1px;
-  font-size: 30px;
-}
-h2{
-  font-size: 27px;
-}
-h3 {
- font-size: 24px;
- padding: 4px 10px 2px 10px;
- margin-top: 2px;
-}
-h4 {
-  margin: 0;
-  text-transform: uppercase;
-  font-size: 17px;
-}
-button {
-  font-size: 12px;
-  padding: 3px 5px;
-  margin: 5px 1px;
-  border-radius: 0px;
-}
-#x {
-  font-size: 11px;
-  color:#a10404;
-  letter-spacing: 1px;
-  font-weight: 600;
-  background-color: #f8f8fa;
-  padding: 1px;
-  margin: 1px 1px;
-  border: 1px solid #323336;
-  border-radius: 1px;
-  text-transform: uppercase;
-}
-.bills {
-  padding: 8px 1px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  margin: 12px 1px;
-  min-width: 3px;
+
+  .home {
+    margin: 6% 3%;
+    padding: 18px;
+  }
+  .header {
+    margin: 3% 5px;
+    padding: 2px 6px;
+  }
+  img {
+    width: 75%;
+  }
+  h1 {
+    letter-spacing: 1px;
+    margin: 1px 1px;
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 27px;
+  }
+  h3 {
+    font-size: 24px;
+    padding: 4px 10px 2px 10px;
+    margin-top: 2px;
+  }
+  h4 {
+    margin: 0;
+    text-transform: uppercase;
+    font-size: 17px;
+  }
+  button {
+    font-size: 12px;
+    padding: 3px 5px;
+    margin: 5px 1px;
+    border-radius: 0px;
+  }
+  #x {
+    font-size: 11px;
+    color: #a10404;
+    letter-spacing: 1px;
+    font-weight: 600;
+    background-color: #f8f8fa;
+    padding: 1px;
+    margin: 1px 1px;
+    border: 1px solid #323336;
+    border-radius: 1px;
+    text-transform: uppercase;
+  }
+  .bills {
+    padding: 8px 1px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 12px 1px;
+    min-width: 3px;
+  }
+
+  .login {
+    margin: 2% 20% 2% 5%;
+    min-width: 245px;
+    padding: 0px 13px 13px;
+  }
+  .dashboard {
+    margin-top: 25px;
+  }
+  .headline {
+    margin: 18px 1px 18px 1px;
+    text-align: center;
+  }
+  .grid {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+    margin: 2% 2px;
+    padding: 2px;
+    background-color: #b2cfe200;
+  }
+  .head {
+    font-size: 15px;
+    padding: 1px 1px;
+    border-bottom: rgb(153, 150, 150) 1px solid;
+    margin-top: 0;
+  }
+
+  td {
+    padding: 4px 1px;
+    border-bottom: rgb(197, 194, 194) 1px solid;
+    background-color: #fff;
+    text-align: left;
+    font-size: 13px;
+    font-weight: 500;
+    color: #121214;
+  }
+  td p {
+    padding: 0px;
+    margin: 0px;
+  }
+
+  .edit {
+    border: rgb(221, 217, 217) 1px solid;
+    background-color: rgba(223, 223, 223, 0.336);
+  }
+  .edit:hover {
+    background-color: rgb(202, 204, 203);
+  }
+  .hidden {
+    display: none;
+  }
+  .expand {
+    padding: 0px 2px 0px 2px;
+  }
+  .expand input {
+    display: block;
+    width: 60px;
+    font-size: 16px;
+    font-weight: 500;
+  }
 }
 
-.login {
-  margin: 2% 20% 2% 5%;
-  min-width: 245px;
-  padding: 0px 13px 13px;
-}
-.dashboard {
-  margin-top:25px;
-}
-.headline {
-  margin: 18px 1px 18px 1px;
-  text-align: center;
-}
- .grid {
-   display: flex;
-   flex-direction: column;
-   justify-content: flex-start;
-   align-items: stretch;
-  margin: 2% 2px;
-  padding: 2px;
-  background-color: #b2cfe200;
-}
-.head {
-  font-size: 15px;
-  padding: 1px 1px;
-  border-bottom:rgb(153, 150, 150) 1px solid;
-  margin-top: 0;
-}
-
-td {
-  padding: 4px 1px;
-  border-bottom:rgb(197, 194, 194) 1px solid;
-  background-color: #fff;
-  text-align: left;
-  font-size: 13px;
-  font-weight: 500;
-  color: #121214 ;
-}
-td p {
-  padding: 0px;
-  margin: 0px;
-}
-
-.edit {
-  border:rgb(221, 217, 217) 1px solid;
-  background-color: rgba(223, 223, 223, 0.336);
-}
-.edit:hover {
-  background-color: rgb(202, 204, 203);
-}
-.hidden {
-  display:none;
-}
- .expand {
-padding: 0px 2px 0px 2px;
-}
-.expand input {
-  display: block;
-  width: 60px;
-  font-size: 16px;
-  font-weight: 500;
-}
-
-}
-
-@media all and (max-width:395px ) {
-  .header{
+@media all and (max-width: 395px) {
+  .header {
     margin: 3% 10px;
     padding: 10px 4px;
   }
   img {
     width: 80%;
+    height: 60%;
   }
- 
+
   #i {
     margin-left: 7px;
     padding-right: 5px;
@@ -512,26 +505,25 @@ padding: 0px 2px 0px 2px;
     font-size: 12px;
   }
   .grid {
-   margin: 1% 0px;
-   padding: 1px;
- 
- }
- .head {
-  font-size: 13px;
-  font-weight: 500;
-  padding: 0px;
-  margin-top: 0;
-}
-#x {
-  font-size: 11px;
-  color:#a10404;
-  letter-spacing: 1px;
-  font-weight: 600;
-  background-color: #f8f8fa;
-  padding: 1px;
-  margin: 1px 0px;
-  border: 1px solid #323336;
-  border-radius: 1px;
-  text-transform: uppercase;
-}
+    margin: 1% 0px;
+    padding: 1px;
+  }
+  .head {
+    font-size: 13px;
+    font-weight: 500;
+    padding: 0px;
+    margin-top: 0;
+  }
+  #x {
+    font-size: 11px;
+    color: #a10404;
+    letter-spacing: 1px;
+    font-weight: 600;
+    background-color: #f8f8fa;
+    padding: 1px;
+    margin: 1px 0px;
+    border: 1px solid #323336;
+    border-radius: 1px;
+    text-transform: uppercase;
+  }
 }
